# QPALM_vLADEL

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  README.md  conanfile.py  pyproject.toml
.github/workflows/: documentation.yml  linux.yml  macos.yml  matlab.yml  wheel-short-test.yml  wheel-upload.yml  wheel.yml  windows.yml
1.0.0/Coverage/: index-sort-f.html  index-sort-l.html  index.html
1.0.0/Doxygen/: annotated.html  citelist.html  classes.html  classqpalm_1_1Data.html  classqpalm_1_1Data__coll__graph.map  classqpalm_1_1Solver.html  classqpalm_1_1Solver_a43cbe4e495be0898c733d9589531e63c_cgraph.map  classqpalm_1_1Solver_a43cbe4e495be0898c733d9589531e63c_cgraph.md5  constants_8h.html  constants_8h__dep__incl.map  constants_8h__dep__incl.md5  constants_8h_source.html  custom_stylesheet.css  dir_000005_000004.html  dir_000006_000004.html  dir_000007_000004.html  dir_000008_000004.html  dir_000008_000007.html  dir_000009_000004.html  dir_09ce2d5a5a5400dee48ae7d0c292cfc2.html  dir_4541c9856ab846cdae324de488ddad2d.html  dir_4541c9856ab846cdae324de488ddad2d_dep.map  dir_4541c9856ab846cdae324de488ddad2d_dep.md5  dir_4e8d938e9ddb5a617c200d5739d1f41a.html  dir_8b15fb9d6dffcbc1d5093abc1af0be36.html  dir_8b15fb9d6dffcbc1d5093abc1af0be36_dep.map  dir_8b15fb9d6dffcbc1d5093abc1af0be36_dep.md5  dir_9d4fbfefdba071afed740879df7c3465.html  dir_9d4fbfefdba071afed740879df7c3465_dep.map  dir_9d4fbfefdba071afed740879df7c3465_dep.md5  dir_a7b370e73e7f9092687d114874d9816a.html  dir_a7b370e73e7f9092687d114874d9816a_dep.map  dir_a7b370e73e7f9092687d114874d9816a_dep.md5  dir_ab6c2c68d98b9838edd2eccfd20c8bdb.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_e94c9f0095f7b79de715bb90aa73c559.html  dir_e94c9f0095f7b79de715bb90aa73c559_dep.map  dir_e94c9f0095f7b79de715bb90aa73c559_dep.md5  dir_f8b4a62496cf3ede66d0d81285489fca.html  dir_f8b4a62496cf3ede66d0d81285489fca_dep.map  (+220 more)
1.1.0/Coverage/: index-sort-f.html  index-sort-l.html  index.html
1.1.0/Doxygen/: annotated.html  citelist.html  classes.html  classqpalm_1_1Data.html  classqpalm_1_1Solver.html  classqpalm_1_1Solver_a693af99e39a9035bbbc4fb61fcb427d1_cgraph.md5  examples.html  (+252 more)
Coverage/: index-sort-f.html  index-sort-l.html  index.html  shield.io.coverage.json
Doxygen/: annotated.html  citelist.html  classes.html  classqpalm_1_1Data.html  classqpalm_1_1Data_a1b5c05b8c1aaf0980415fcbf0f1ecac2_cgraph.md5  classqpalm_1_1Data_abc2d3d30a0663dce709a7342fc366251_cgraph.map  classqpalm_1_1Solver.html  classqpalm_1_1Solver__coll__graph.md5  classqpalm_1_1Solver_a43cbe4e495be0898c733d9589531e63c_cgraph.md5  classqpalm_1_1Solver_a6df33bfd68c5b8caaaa6f726f1a9f517_cgraph.md5  classqpalm_1_1Solver_af1d4022b0a006662d32e82ec8959156b_cgraph.md5  constants_8h.html  constants_8h_source.html  dir_000000_000005.html  dir_000004_000005.html  dir_000005_000009.html  dir_000006_000005.html  dir_000006_000010.html  dir_000007_000005.html  dir_000010_000005.html  dir_000011_000005.html  dir_000011_000006.html  dir_000012_000005.html  dir_09ce2d5a5a5400dee48ae7d0c292cfc2.html  dir_0c1b941419656183a4d95f028c76f6e4.html  dir_0c1b941419656183a4d95f028c76f6e4_dep.map  dir_4541c9856ab846cdae324de488ddad2d.html  dir_4e8d938e9ddb5a617c200d5739d1f41a.html  dir_7056c270b4e1ca6974842b31f736cdb3.html  dir_7c0dbe6f3defcb095d8978ea248594df.html  dir_8b15fb9d6dffcbc1d5093abc1af0be36.html  dir_9d4fbfefdba071afed740879df7c3465.html  dir_a7b370e73e7f9092687d114874d9816a.html  dir_ab6c2c68d98b9838edd2eccfd20c8bdb.html  dir_ab6c2c68d98b9838edd2eccfd20c8bdb_dep.md5  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_e94c9f0095f7b79de715bb90aa73c559.html  dir_f8b4a62496cf3ede66d0d81285489fca.html  examples.html  examples_2c_2qpalm_demo_8c-example.html  (+235 more)
QPALM/: CMakeLists.txt
QPALM/cmake/: Config.cmake.in  GlobalCompileOptions.cmake  Install.cmake  coreConfig.cmake.in
QPALM/cxx/: CMakeLists.txt
QPALM/cxx/include/: qpalm.hpp  sparse.hpp
QPALM/cxx/src/: qpalm.cpp
QPALM/include/: global_opts.h  qpalm.h
QPALM/include/cxx/: qpalm.hpp  sparse.hpp
QPALM/interfaces/: CMakeLists.txt
QPALM/interfaces/cxx/: CMakeLists.txt
QPALM/interfaces/cxx/cmake/: Config.cmake.in  Install.cmake
QPALM/interfaces/cxx/include/: qpalm.hpp  sparse.hpp
QPALM/interfaces/cxx/src/: qpalm.cpp  sparse.cpp
QPALM/interfaces/fortran/: CMakeLists.txt  qpalm_fiface.F90  qpalm_fortran.c
QPALM/interfaces/fortran/cmake/: Config.cmake.in  Install.cmake
QPALM/interfaces/julia/: CMakeLists.txt  build_tarballs.jl  qpalm_julia.c
QPALM/interfaces/mex/: CMakeLists.txt
QPALM/interfaces/mtx/: CMakeLists.txt  qpalm_mtx.c
QPALM/interfaces/python/: CMakeLists.txt  qpalm.cpp  qpalm.py.cpp
QPALM/interfaces/python/cmake/: Pybind11Stubgen.cmake
QPALM/interfaces/python/qpalm/: __init__.py
QPALM/interfaces/python/qpalm-debug/: pyproject.toml
QPALM/interfaces/python/test/: test_qpalm_cancel.py  test_qpalm_thread.py
QPALM/interfaces/qps/: CMakeLists.txt
QPALM/interfaces/qps/src/: index_hash.c  qpalm_qps.c
QPALM/python/: CMakeLists.txt  qpalm.cpp
QPALM/python/test/: test_qpalm.py
QPALM/src/: global_opts.c  nonconvex.c  qpalm.c
QPALM/src/cxx/: qpalm.cpp  sparse.cpp
docs/: README.md
doxygen/: Doxyfile  custom_stylesheet.css  header.html
examples/: CMakeLists.txt  conanfile.txt  examples.dox
examples/c/: CMakeLists.txt  qpalm_demo.c
examples/cxx/: CMakeLists.txt  qpalm_demo.cpp
examples/fortran/: CMakeLists.txt  qpalm_fortran_demo.f90
examples/julia/: qpalm_julia_demo.jl
examples/matlab/: qpalm_mex_demo.m  qpalm_mex_nonconvex_demo.m
examples/python/: qpalm_python_demo.py
scripts/: coverage.sh
src/: CMakeLists.txt
test/: CMakeLists.txt
test/include/Minunit/: minunit.h
test/src/: test_basic_qp.cpp  test_casadi_general_convex_sparse.cpp  test_casadi_general_unconstrained.cpp  test_degen_hess.cpp  test_dua_inf_qp.cpp  test_error_handling.cpp  test_lin_alg.cpp  test_ls_qp.cpp  test_medium_qp.cpp  test_nonconvex_qp.cpp  test_prim_inf_qp.cpp  test_solver_interface.cpp  test_update.cpp  test_update_after_setup.cpp  test_validate.cpp
test_package/: CMakeLists.txt  conanfile.py
(+6254 files in other folders)
